[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backports-reviewer"
version = "0.1.0"
description = "Semi-automated public upstream backport candidate reviewer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
backport-harness = "backport_harness.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backport_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
